--- a/bICSI/src/main/res/layout/fragment_planner_single.xml
+++ b/bICSI/src/main/res/layout/fragment_planner_single.xml
@@ -9,6 +9,19 @@
         android:padding="10dp"
         android:orientation="vertical" >
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?android:attr/buttonStyleSmall"
+                android:text="Delete from Planner"
+                android:id="@+id/planner_button" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
